[project]
name = "weatherflow4py"
version = "0.20.0"
description = "Python library used by Home Assistant to interact with the WeatherFlow REST API"
authors = [
    { name = "Jeef", email = "jeffstein@gmail.com" }
]
readme = "README.md"
license = "MIT"

dependencies = [
    "aiohttp>=3.9.5",
    "marshmallow>=3.21.1",
    "websockets>=12.0",
    "dataclasses-json>=0.6.4",
]
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "mypy>=1.9.0",
    "pytest>=8.1.1",
    "pytest-asyncio>=0.23.6",
    "aioresponses>=0.7.6",
    "coverage>=7.4.4",
    "python-dotenv>=1.0.1",
    "pytest-cov>=5.0.0",
    "pre-commit>=3.7.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/weatherflow4py"]
